envoy.yaml
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901

layered_runtime:
  layers:
    - name: static_layer
      static_layer:
        envoy.reloadable_features.sanitize_te: false

static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8080
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                codec_type: AUTO
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      cors:
                        allow_origin_string_match:
                          - prefix: "*"   # Allow all origins (development). For production, use exact match.
                        allow_methods: GET, POST, PUT, DELETE, OPTIONS
                        allow_headers: "content-type,x-grpc-web,grpc-timeout,te,x-user-agent,x-grpc-web-version,x-file-size,x-file-type,x-file-name,x-grpc-web-text"
                        expose_headers: "grpc-status,grpc-message,grpc-transport-encoding,x-grpc-web,x-grpc-web-text"
                        allow_credentials: true
                        max_age: "1728000"
                      routes:
                        - match: { prefix: "/myservice.FileService/UploadFile" }
                          route:
                            cluster: greeter_service
                        - match: { prefix: "/" }
                          route:
                            cluster: greeter_service
                http_filters:
                  - name: envoy.filters.http.lua
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua
                      inline_code: |
                        function envoy_on_request(request_handle)
                          local path = request_handle:headers():get(":path")
                          if path and string.find(path, "/myservice.FileService/UploadFile") or
                            string.find(path, "/myservice.FileService/DownloadFile") then
                            request_handle:headers():add("te", "trailers")
                          end
                        end
                  - name: envoy.filters.http.cors
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
                  - name: envoy.filters.http.grpc_web
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_web.v3.GrpcWeb
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
    - name: greeter_service
      connect_timeout: 5s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      http2_protocol_options: {}
      load_assignment:
        cluster_name: greeter_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 50051
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
          sni: "localhost"
          common_tls_context:
            tls_certificates:
              - certificate_chain:
                  filename: "./certs/client.crt"
                private_key:
                  filename: "./certs/client.key"
            validation_context:
              trusted_ca:
                filename: "./certs/ca.crt"
